add module-info details